<resources>
    <string name="app_name">SoccerApp</string>
    <string name="action_settings">Settings</string>
    <string name="button_1_text">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="text_view_position">Position</string>
    <string name="text_view_name">Name</string>
    <string name="text_view_num">Number</string>
    <string name="text_view_enter_player_details">Enter Player Details</string>
</resources>
