<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_enter_player_details"
            android:id="@+id/textView3"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="#9c0e0e" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_position"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:id="@+id/textView4"
            android:textColor="#9c0e0e" />

        <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/position_spinner"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_view_num"
            android:textSize="17sp"
            android:id="@+id/textView8"
            android:textColor="#9c0e0e" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:inputType="numberDecimal"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:id="@+id/numEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_name"
            android:textSize="17sp"
            android:id="@+id/textView5"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#9c0e0e" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEditText"


            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPersonName"/>

        <Button
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="Add Player"
            android:background="@drawable/buttonshape2"
            android:layout_gravity="center_horizontal"
            android:id="@+id/add_player_button"
            android:layout_marginTop="30dp"
            android:onClick="createDB"/>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="30dp"
            android:id="@+id/playerListEditText"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape2"
            android:text="Next >"
            android:layout_gravity="end"
            android:layout_marginBottom="25dp"
            android:id="@+id/next_page_button"
            android:onClick="onClickNextPage"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            />
    </LinearLayout>

</ScrollView>
